--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     crossorigin="anonymous"></script>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
     crossorigin="anonymous">
+  <script src="http://cdn.auth0.com/js/lock/10.0/lock.min.js"></script>
 </head>
 
 <body>
